# garbanzo

./: CMakeLists.txt  main.cpp
Testing/: garbanzo-test.sh  ninja.txt  per-line-ninja  uppercase-ninja
include/: Arguments.h  Extensions.h  File.h  TaskPooler.h
src/: Arguments.cpp  Extensions.cpp  File.cpp  TaskPooler.cpp
